--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div class="main-container">
       <!-- sidebar section -->
       <aside class="sidebar-section">
+        <!-- UPDATE PROFILE PHOTO FROM DAVID NEPARIDZE -->
         <!-- profile photo -->
         <img src="img/myphoto.JPG" alt="my photo" width="370px" />
 
