new b/w photo from David Neparidze

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <aside class="sidebar-section">
         <!-- UPDATE PROFILE PHOTO FROM DAVID NEPARIDZE -->
         <!-- profile photo -->
-        <img src="img/myphoto.JPG" alt="my photo" width="370px" />
+        <img src="img/myphoto2.jpg" alt="my photo" width="370px" />
 
         <!-- contacts section -->
         <div class="contacts-section">
