updated locations to indicate REMOTE positions

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </h4>
 
             <p class="my-work-experience-period">
-              October 2020 - up to now <span class="my-work-experience-divider">|</span> Ukraine
+              October 2020 - up to now <span class="my-work-experience-divider">|</span> Ukraine (Remote)
             </p>
 
             <ul class="my-work-experience-duties">
@@ -218,7 +218,7 @@
 
             <p class="my-work-experience-period">
               June 2013 - up to now <span class="my-work-experience-divider">|</span> Ukraine, UK,
-              Malaysia, Singapore
+              Malaysia, Singapore (Remote)
             </p>
 
             <ul class="my-work-experience-duties">
@@ -246,7 +246,7 @@
             </h4>
 
             <p class="my-work-experience-period">
-              March 2019 - November 2019 <span class="my-work-experience-divider">|</span> Hong Kong
+              March 2019 - November 2019 <span class="my-work-experience-divider">|</span> Hong Kong (Remote)
             </p>
 
             <ul class="my-work-experience-duties">
